--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -16,7 +16,7 @@ body {
 $spacing-unit:     30px !default;
 
 $text-color:        #fdfdfd !default;
-$background-color:  #111!default;
+$background-color:  #1c1e1f!default;
 // $brand-color:      #2a7ae2 !default;
 $brand-color: #AC66CC;
 
