--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -113,7 +113,7 @@ a {
   &:hover {
     // color: $text-color;
     color: aquamarine;
-    text-decoration: underline;
+    text-decoration: none;
   }
 
   .social-media-list &:hover {
