--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,17 @@ layout: default
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}</p>
+      <div class="post-categories">
+        {% if post %}
+          {% assign categories = post.categories %}
+        {% else %}
+          {% assign categories = page.categories %}
+        {% endif %}
+        {% for category in categories %}
+        <a href="{{site.baseurl}}/categories/#{{category|slugize}}" style="border: 2px solid; border-radius: 8px; border-color:cadetblue; color:cadetblue; font-size: small; padding: 3px;">{{category}}</a>
+        {% unless forloop.last %}&nbsp;{% endunless %}
+        {% endfor %}
+      </div>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
