--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,9 +33,9 @@ layout: default
     {{ content }}
   </div>
 
-  {%- if site.disqus.shortname -%}
+<!--  {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
-  {%- endif -%}
+  {%- endif -%} -->
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
