Turned Dark Mode into White Mode

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -15,8 +15,8 @@ body {
 
 $spacing-unit:     30px !default;
 
-$text-color:        #fdfdfd !default;
-$background-color:  #1c1e1f!default;
+$text-color:        #1c1e1f !default;
+$background-color:  #fdfdfd!default;
 // $brand-color:      #2a7ae2 !default;
 $brand-color: #AC66CC;
 
