--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -2,13 +2,11 @@
  * Syntax highlighting styles
  */
 .highlight {
-  // background: #fff;
-  background: #1D1F20;
+  background: #fff;
   @extend %vertical-rhythm;
 
   .highlighter-rouge & {
-    // background: #eef;
-    background: #1D1F20;
+     background: #eef;
   }
 
   .c     { color: #998; font-style: italic } // Comment
