--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -46,7 +46,7 @@
     }
 
     &:hover{
-      color: aquamarine;
+      color: rgb(30, 99, 76);
     }
   }
 
@@ -123,6 +123,7 @@
 .social-media-list {
   list-style: none;
   margin-left: 0;
+  display: inline;
 }
 
 .footer-col-wrapper {
