added comment section using utterences

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,14 @@ layout: default
     {{ content }}
   </div>
 
+<script src="https://utteranc.es/client.js"
+  repo="avionmission/comments_on_our_blog"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async>
+</script>
+
 <!--  {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
   {%- endif -%} -->
