--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,3 +47,5 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+{% include advertisements.html %}
