--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <link rel="shortcut icon" type="image/png" href="favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="https://avionmission.github.io/blog/favicon.ico">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2079200617314580"
   crossorigin="anonymous"></script>
   {%- feed_meta -%}
