updated navigation bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,9 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="https://avionmission.github.io">Home</a>
+          <a class="page-link" href="https://www.avionmission.com">Home</a>
+          <a class="page-link" href="https://www.avionmission.com/#portfolio">Portfolio</a>
+          <a class="page-link" href="https://www.avionmission.com/#services">Services</a>
           <a class="page-link" href="{{site.baseurl}}/categories">Categories</a>
         </div>
       </nav>
