Solved alignment issues in nav bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,8 +25,7 @@
         <div class="trigger">
           <a class="page-link" href="https://www.avionmission.com">Home</a>
           <a class="page-link" href="https://www.avionmission.com/#portfolio">Portfolio</a>
-          <a class="page-link" href="https://www.avionmission.com/#services">Services</a>
-          <a class="page-link" href="{{site.baseurl}}/categories">Categories</a>
+          <a class="page-link" href="{{site.baseurl}}/categories">Archive</a>
         </div>
       </nav>
     {%- endif -%}
