Modified CSS to Dark theme and more

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper"> 
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
+    <h2 class="footer-heading">Follow me on Socials!</h2>
     {%- if site.email -%}
         <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
     {%- endif -%}
