--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
           {% assign categories = page.categories %}
         {% endif %}
         {% for category in categories %}
-        <a href="{{site.baseurl}}/categories/#{{category|slugize}}" style="border: 2px solid; border-radius: 8px; border-color:cadetblue; color:cadetblue; font-size: small; padding: 3px;">{{category}}</a>
+        <a href="{{site.baseurl}}/categories/#{{category|slugize}}" style="font-size: medium; background-color: #7b7b7b; color: #d2d2d2; border-radius: 8px; margin-right: 8px; padding: 4px 8px;">{{category}}</a>
         {% unless forloop.last %}&nbsp;{% endunless %}
         {% endfor %}
       </div>
@@ -36,7 +36,7 @@ layout: default
 <script src="https://utteranc.es/client.js"
   repo="avionmission/comments_on_our_blog"
   issue-term="pathname"
-  theme="github-light"
+  theme="github-dark"
   crossorigin="anonymous"
   async>
 </script>
