--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,10 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="https://avionmission.com/">Home</a>
+          <a class="page-link" href="https://avionmission.com">Home</a>
           <a class="page-link" href="{{site.baseurl}}/">Blog</a>
-          <a class="page-link" href="{{site.baseurl}}/categories">Archive</a>
+          <a class="page-link" href="https://youtube.com/@devstoriespod">Podcast</a>
+          <!--<a class="page-link" href="{{site.baseurl}}/categories">Archive</a>-->
         </div>
       </nav>
     {%- endif -%}
