--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -18,7 +18,7 @@ $spacing-unit:     30px !default;
 $text-color:        #c2c2c2 !default;
 $background-color:  #1c1e1f!default;
 // $brand-color:      #2a7ae2 !default;
-$brand-color: #AC66CC;
+$brand-color: #2E8FF7;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
