Changed newsletter CTA

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
   {%- if site.posts.size > 0 -%}
 
   <div class="newsletter-embedding" style="text-align: center;">
-    <p style="font-size: medium; font-family: Verdana, Geneva, Tahoma, sans-serif;">Subscribe Now for a Weekly Dose of Tech Insights! 🤓🔮🤖👨‍💻</p>
+    <p style="font-size: medium; font-family: Verdana, Geneva, Tahoma, sans-serif;">Stay tuned, it's about to get weird! 🔮🤖</p>
     <div id="custom-substack-embed" style="margin-bottom: 2rem;"></div>
 
     <script>
