--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap" rel="stylesheet">
   
   <div class="newsletter-embedding" style="text-align: center;">
-    <p style="font-size: medium; font-family: Verdana, Geneva, Tahoma, sans-serif;">Subscribe Now for a Weekly Dose of Tech Insights! 🤓🔮👨‍💻</p>
+    <p style="font-size: medium; font-family: Verdana, Geneva, Tahoma, sans-serif;">Stay tuned, it's about to get weird! 🔮🤖</p>
     <div id="custom-substack-embed" style="margin-bottom: 3rem;"></div>
 
     <script>
