--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
-  <body>
+<meta http-equiv="refresh" content="0; url=https://blog.avionmission.com">
+<meta name="robots" content="noindex">  
+<body>
 
     {%- include header.html -%}
 
