Removed Redirect, added notification in homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,8 +16,10 @@ layout: default
   {%- if site.posts.size > 0 -%}
 
   <div class="newsletter-embedding" style="text-align: center;">
-    <p style="font-size: medium; font-family: Verdana, Geneva, Tahoma, sans-serif;">Stay tuned, it's about to get weird! 🔮🤖</p>
-    <div id="custom-substack-embed" style="margin-bottom: 2rem;"></div>
+    <h3><a href="https://blog.avionmission.com">Moving to Hashnode</a></h3>
+    <p >I’m freezing this blog and starting to post on my <a href="https://blog.avionmission.com">Hashnode</a> instead. The authoring experience is much more convenient for me there. Please follow me there, and check out the <a href="">Youtube channel</a> for video content.</p>
+    <p>You can subscribe to the <a href="https://blog.avionmission.com/newsletter">newsletter</a> to get my posts directly into your inbox.</p>
+    <!-- <div id="custom-substack-embed" style="margin-bottom: 2rem;"></div>
 
     <script>
       window.CustomSubstackWidget = {
@@ -34,7 +36,7 @@ layout: default
         // Go to substackapi.com to unlock custom redirect
       };
     </script>
-    <script src="https://substackapi.com/widget.js" async></script>
+    <script src="https://substackapi.com/widget.js" async></script> -->
   </div>
   
   <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
