--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
         <div class="trigger">
           <a class="page-link" href="https://avionmission.com">Home</a>
           <a class="page-link" href="{{site.baseurl}}/">Blog</a>
-          <a class="page-link" href="https://youtube.com/@devstoriespod">Podcast</a>
+          <a class="page-link" href="https://youtube.com/AvinashPrasad">Videos</a>
           <!--<a class="page-link" href="{{site.baseurl}}/categories">Archive</a>-->
         </div>
       </nav>
